@@ -21,6 +21,8 @@ Changes in 3.1.9
 * UPD: asip-status.pl: IPv6 support
 * FIX: afpd: don't use network IDs without LDAP, bug #621
 * FIX: afpd: reading from file may fail, bug #619
+* NEW: AFP clients should not be able to copy or manipulate special
+       extended attributes set by NFS and SMB servers on Solaris, issue #36
 
 Changes in 3.1.8
 ================
